--- a/XamarinFCM/XamarinFCM/Properties/AndroidManifest.xml
+++ b/XamarinFCM/XamarinFCM/Properties/AndroidManifest.xml
@@ -13,7 +13,7 @@
       <intent-filter>
         <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
         <action android:name="com.google.android.c2dm.intent.REGISTRATION"/>
-        <category android:name="${applicationId}"/>
+        <category android:name="/*Reference To Your ID in GoogleServicesJson*/"/>
       </intent-filter>     
     </receiver>
   </application>
